// $Id$

Image Picker  for D6 in HEAD, 2008-09-04
------------------------------------
by hutch, added Use full url feature

Image Picker  for D6 in HEAD, 2008-09-02
------------------------------------
by hutch, #302210 patch supplied by Joshua Hesketh
improved admin settings and improved the javascript
insertion method

Image Picker  for D6 in HEAD, 2008-07-11
------------------------------------
by hutch, #281241 fixed excessive messages on install.

Image Picker for D6 in HEAD, 2006-07-01
------------------------------------
by hutch, added imagepicker to My Account
added paging to browse images
various menu fixes

Image Picker for D6 in HEAD, 2006-06-24
------------------------------------
by hutch, added support for lightbox2

Image Picker for D6 in HEAD, 2006-06-15
------------------------------------
by hutch, fixed bug in install, added alignment options

Image Picker for D6 in HEAD, 2006-06-14
------------------------------------
by hutch, beta version for Drupal 6

Image Picker 5.x-1.x-dev, 2008-06-06
------------------------------------
by hutch, #266621 fixed bug in support for comments

Image Picker 5.x-1.x-dev, 2008-06-04
------------------------------------
by hutch, #266621 added support for comments

Image Picker 5.x-1.x-dev, 2008-05-31
------------------------------------
by hutch, brought module up to drupal coding standards

Image Picker 5.x-1.x-dev, 2008-05-30
------------------------------------
By hutch, numerous changes by new maintainer
fixed module path finding
removed .htaccess file creation on install, not required
fixed permissions
added admin settings
lots of cleanup and code comments

Image Picker 5.x-1.x-dev, 2007-12-15
------------------------------------
Initial release of imagepicker module to HEAD